--- a/habitat/package.json
+++ b/habitat/package.json
@@ -16,6 +16,7 @@
     "chalk": "^5.0.1",
     "commander": "^9.0.0",
     "express": "^4.17.3",
+    "http-status-codes": "^2.2.0",
     "inquirer": "^8.2.1",
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
