Overhauled the main parser code, which was quickly becoming more trouble than it was worth due to the way it was coupled with the state tree object, and wasn't as flexible because of its particular use of switch statements. That made it less ideal to enforce syntax rules, or at least harder to read. It is much more procedural now like the other parsers, and the state tree class has been simplified down yet again. Fixed comments. Made syntax errors more helpful in general. Added (non-problematic) test code, with more VSCode configurations.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,43 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch CLI",
+            "name": "Launch Example File (Development)",
+            "program": "${workspaceFolder}/habitat/src/app.js",
+            "cwd": "${workspaceFolder}/habitat",
+            "args": ["file", "src/assets/vmdl/example.vmdl", "--log-level", "debug"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Example File (Production)",
+            "program": "${workspaceFolder}/habitat/src/app.js",
+            "cwd": "${workspaceFolder}/habitat",
+            "args": ["file", "src/assets/vmdl/example.vmdl"],
+            "outputCapture": "std",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Interactive CLI (Development)",
+            "program": "${workspaceFolder}/habitat/src/app.js",
+            "cwd": "${workspaceFolder}/habitat",
+            "args": ["console", "--log-level", "debug"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Interactive CLI (Production)",
             "program": "${workspaceFolder}/habitat/src/app.js",
             "cwd": "${workspaceFolder}/habitat",
             "args": ["console"],
