Some further design changes; backtracked on context operator subcontext directions (into-stack instead of out-of-stack since that is still more intuitive), and removed 'no' operator in favor of an append-only approach for composition (since 'now' can still be used to manage deletion at the compiler's discretion) and was replaced with a locking mechanism instead. Additionally separated out composite-time variables (clauses with '@') from compile-time variables (starting with '$'), and made these more ubiquitous and open-ended for the parser. Unrelated, but also added a VMDL test with bad examples (should cause syntax errors), and made a Notepad++ user-defined language config for VMDL. Still somehow have not even touched the compositor, though. Hopefully next.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,10 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Example File (Development)",
+            "name": "Launch Good Example File (Development)",
             "program": "${workspaceFolder}/habitat/src/app.js",
             "cwd": "${workspaceFolder}/habitat",
-            "args": ["file", "src/assets/vmdl/example.vmdl", "--log-level", "debug"],
+            "args": ["file", "src/tests/vmdl/successes.vmdl", "--log-level", "debug"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -17,10 +17,33 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Example File (Production)",
+            "name": "Launch Good Example File (Production)",
             "program": "${workspaceFolder}/habitat/src/app.js",
             "cwd": "${workspaceFolder}/habitat",
-            "args": ["file", "src/assets/vmdl/example.vmdl"],
+            "args": ["file", "src/tests/vmdl/successes.vmdl"],
+            "outputCapture": "std",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Bad Example File (Development)",
+            "program": "${workspaceFolder}/habitat/src/app.js",
+            "cwd": "${workspaceFolder}/habitat",
+            "args": ["file", "src/tests/vmdl/failures.vmdl", "--log-level", "debug"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Bad Example File (Production)",
+            "program": "${workspaceFolder}/habitat/src/app.js",
+            "cwd": "${workspaceFolder}/habitat",
+            "args": ["file", "src/tests/vmdl/failures.vmdl"],
             "outputCapture": "std",
             "console": "externalTerminal"
         },
