Removed references to Wingspan Habitat and renamed VMDL to 'Tridy' (pronounced 'tree-dee' or 'treaty'), which due to requested renaming was expected to be renamed anyway. This part of the project in general has been renamed 'TridyDB CLI', considering as it is expected to become open source, even if Wingspan does not. Wingspan Habitat will be under another part of this project, and will use a framework created for interacting with TridyDB.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Good Example File (Development)",
-            "program": "${workspaceFolder}/habitat/src/app.js",
-            "cwd": "${workspaceFolder}/habitat",
+            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
+            "cwd": "${workspaceFolder}/tridydb-cli",
             "args": ["file", "src/tests/vmdl/successes.vmdl", "--log-level", "debug"],
             "outputCapture": "std",
             "console": "externalTerminal",
@@ -18,8 +18,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Good Example File (Production)",
-            "program": "${workspaceFolder}/habitat/src/app.js",
-            "cwd": "${workspaceFolder}/habitat",
+            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
+            "cwd": "${workspaceFolder}/tridydb-cli",
             "args": ["file", "src/tests/vmdl/successes.vmdl"],
             "outputCapture": "std",
             "console": "externalTerminal"
@@ -28,8 +28,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Bad Example File (Development)",
-            "program": "${workspaceFolder}/habitat/src/app.js",
-            "cwd": "${workspaceFolder}/habitat",
+            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
+            "cwd": "${workspaceFolder}/tridydb-cli",
             "args": ["file", "src/tests/vmdl/failures.vmdl", "--log-level", "debug"],
             "outputCapture": "std",
             "console": "externalTerminal",
@@ -41,8 +41,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Bad Example File (Production)",
-            "program": "${workspaceFolder}/habitat/src/app.js",
-            "cwd": "${workspaceFolder}/habitat",
+            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
+            "cwd": "${workspaceFolder}/tridydb-cli",
             "args": ["file", "src/tests/vmdl/failures.vmdl"],
             "outputCapture": "std",
             "console": "externalTerminal"
@@ -51,8 +51,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Interactive CLI (Development)",
-            "program": "${workspaceFolder}/habitat/src/app.js",
-            "cwd": "${workspaceFolder}/habitat",
+            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
+            "cwd": "${workspaceFolder}/tridydb-cli",
             "args": ["console", "--log-level", "debug"],
             "outputCapture": "std",
             "console": "externalTerminal",
@@ -64,8 +64,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Interactive CLI (Production)",
-            "program": "${workspaceFolder}/habitat/src/app.js",
-            "cwd": "${workspaceFolder}/habitat",
+            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
+            "cwd": "${workspaceFolder}/tridydb-cli",
             "args": ["console"],
             "outputCapture": "std",
             "console": "externalTerminal"
@@ -74,8 +74,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch REST API (Development)",
-            "program": "${workspaceFolder}/habitat/src/app.js",
-            "cwd": "${workspaceFolder}/habitat",
+            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
+            "cwd": "${workspaceFolder}/tridydb-cli",
             "args": ["web", "--log-level", "debug"],
             "outputCapture": "std",
             "console": "externalTerminal",
@@ -87,8 +87,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch REST API (Production)",
-            "program": "${workspaceFolder}/habitat/src/app.js",
-            "cwd": "${workspaceFolder}/habitat",
+            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
+            "cwd": "${workspaceFolder}/tridydb-cli",
             "args": ["web"],
             "outputCapture": "std",
             "console": "externalTerminal"
