--- a/tridydb-cli/package.json
+++ b/tridydb-cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "habitat",
+  "name": "tridydb-cli",
   "version": "1.0.0",
-  "description": "Modular application for provisioning and configuring virtual machines",
+  "description": "Interpreter for composing general tree-like data objects using boolean expressions and a specially-built data language.",
   "main": "src/app.js",
   "scripts": {
     "inline": "node src/app.js inline",
