--- a/tridydb-cli/package.json
+++ b/tridydb-cli/package.json
@@ -18,8 +18,10 @@
     "express": "^4.17.3",
     "http-status-codes": "^2.2.0",
     "inquirer": "^8.2.1",
+    "js-yaml": "^4.1.0",
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
+    "uuid": "^8.3.2",
     "winston": "^3.6.0"
   },
   "type": "module"
