Switched to a different UUIDv4 library since I got tired of the most popular one having problems with the debugger that would force me to disable and re-enable it every time I needed to do... well, debugging (I also forgot to re-enable it when I made the last commit, but the new library seems to at least get along with the debugger now, so that there won't be room to make that mistake again).

--- a/tridydb-cli/package.json
+++ b/tridydb-cli/package.json
@@ -8,7 +8,7 @@
     "file": "node src/app.js file",
     "console": "node src/app.js console",
     "web": "node src/app.js web",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "powershell -file src/test.ps1 || pwsh -file test.ps1"
   },
   "author": "J. E. Ellis",
   "license": "MIT",
@@ -21,7 +21,7 @@
     "js-yaml": "^4.1.0",
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
-    "uuid": "^8.3.2",
+    "uuid-random": "^1.3.2",
     "winston": "^3.6.0"
   },
   "type": "module"
