Got TridyDB to work better as just only a node package, too, which seems like now the best choice for Habitat to actually interact with it (as done by just importing the module and calling tridy.parse(...)). That's meant doing some work on moving logic surrounding Tridy's relative front-end back towards the interpreter intermediary (since a lot of it would previously only be seen from the perspective of running Tridy as a standalone program such that interacting with the interpreter alone wouldn't be functional). Also, because it's now a package with an export, JSDoc was installed again, but this time I've chosen only to document the interpreter module (under include/Interpreter.js), as the one outward-facing module.

--- a/tridydb-cli/package.json
+++ b/tridydb-cli/package.json
@@ -23,5 +23,9 @@
     "uuid-random": "^1.3.2",
     "winston": "^3.6.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "jsdoc": "^3.6.10"
+  },
+  "type": "module",
+  "exports": "./src/include/Interpreter.js"
 }
