--- a/tridydb-cli/package.json
+++ b/tridydb-cli/package.json
@@ -13,6 +13,7 @@
   "author": "J. E. Ellis",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.26.1",
     "chalk": "^5.0.1",
     "commander": "^9.0.0",
     "express": "^4.17.3",
