Reworked the arguments again as I said I would, which is much improved this time considering that a lot of the redundancy is gone, the help screen is more informative (and less divided up), and some capabilities are now present that were not possible before, such as giving users the option to specify command or file input *with* opening a console or server as options, so you can pre-load the databases for these if you wish. The original inline (command) and file modes have been replaced with just what is now inline mode. In addition, client mode is now presented as an option too, and is no longer mutually-exclusive to file/command input, or even server mode (so I guess proxying is now possible if that ever becomes useful). Now the readme just needs to be updated.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "name": "Launch Test Console (Development)",
             "program": "${workspaceFolder}/tridydb-cli/src/app.js",
             "cwd": "${workspaceFolder}/tridydb-cli",
-            "args": ["sandbox", "--log-level", "debug", "--pretty"],
+            "args": ["console", "--log-level", "debug", "--pretty"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -20,7 +20,7 @@
             "name": "Launch Test Console (Production)",
             "program": "${workspaceFolder}/tridydb-cli/src/app.js",
             "cwd": "${workspaceFolder}/tridydb-cli",
-            "args": ["sandbox"],
+            "args": ["console"],
             "outputCapture": "std",
             "console": "externalTerminal"
         },
@@ -30,7 +30,7 @@
             "name": "Launch REST Client (Development)",
             "program": "${workspaceFolder}/tridydb-cli/src/app.js",
             "cwd": "${workspaceFolder}/tridydb-cli",
-            "args": ["client", "--log-level", "debug", "--pretty"],
+            "args": ["console", "--client", "--log-level", "debug", "--pretty"],
             "outputCapture": "std",
             "console": "externalTerminal",
             "env": {
@@ -43,7 +43,7 @@
             "name": "Launch REST Client (Production)",
             "program": "${workspaceFolder}/tridydb-cli/src/app.js",
             "cwd": "${workspaceFolder}/tridydb-cli",
-            "args": ["client"],
+            "args": ["console", "--client"],
             "outputCapture": "std",
             "console": "externalTerminal"
         },
