Fixed the VSCode launch configs, after they were moved down to the TridyDB subfolder.

--- a/tridydb-cli/.vscode/launch.json
+++ b/tridydb-cli/.vscode/launch.json
@@ -5,8 +5,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Test Console (Development)",
-            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
-            "cwd": "${workspaceFolder}/tridydb-cli",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
             "args": ["console", "--log-level", "debug", "--pretty"],
             "outputCapture": "std",
             "console": "externalTerminal",
@@ -18,8 +18,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Test Console (Production)",
-            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
-            "cwd": "${workspaceFolder}/tridydb-cli",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
             "args": ["console"],
             "outputCapture": "std",
             "console": "externalTerminal"
@@ -28,8 +28,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch REST Client (Development)",
-            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
-            "cwd": "${workspaceFolder}/tridydb-cli",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
             "args": ["console", "--client", "--log-level", "debug", "--pretty"],
             "outputCapture": "std",
             "console": "externalTerminal",
@@ -41,8 +41,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch REST Client (Production)",
-            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
-            "cwd": "${workspaceFolder}/tridydb-cli",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
             "args": ["console", "--client"],
             "outputCapture": "std",
             "console": "externalTerminal"
@@ -51,8 +51,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch REST Server (Development)",
-            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
-            "cwd": "${workspaceFolder}/tridydb-cli",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
             "args": ["server", "--localhost", "--log-level", "debug"],
             "outputCapture": "std",
             "console": "externalTerminal",
@@ -64,8 +64,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch REST Server (Production)",
-            "program": "${workspaceFolder}/tridydb-cli/src/app.js",
-            "cwd": "${workspaceFolder}/tridydb-cli",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
             "args": ["server", "--localhost"],
             "outputCapture": "std",
             "console": "externalTerminal"
