Wanted to get some progress in (taking a break from working on a script for the first video, which I've been at for several days), which is still on TridyDB, but nevertheless, it's for a feature that I've decided Habitat would use. This feature is optional 'compressed', one-way output in the form of giving certain parameter clauses to @get, which I still need to update the tests and the readme around. See CHANGELOG.md; there's still more to get in for release 1.1, I'd like to note. Notably also, I've decided against TypeScript a while back, given how much messier it just seems to make the code (with strict type-checking enabled) and some problems that seem to render it not fully-compatible with Node 18's libraries yet (one of which, readline, this project uses). In addition, Habitat will be programmed in ES6 just like TridyDB. For the sake of sharing code, if doing both in TypeScript isn't an option, it would be better to do neither in that way.

--- a/tridydb-cli/.vscode/launch.json
+++ b/tridydb-cli/.vscode/launch.json
@@ -4,6 +4,29 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "Launch Test File (Development)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["inline", "--file", "src/tests/debug/test.tri", "--log-level", "debug", "--pretty"],
+            "outputCapture": "std",
+            "console": "externalTerminal",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Test File (Production)",
+            "program": "${workspaceFolder}/src/app.js",
+            "cwd": "${workspaceFolder}/",
+            "args": ["inline", "--file", "src/tests/debug/test.tri"],
+            "outputCapture": "std",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Launch Test Console (Development)",
             "program": "${workspaceFolder}/src/app.js",
             "cwd": "${workspaceFolder}/",
