--- a/tridydb-cli/package.json
+++ b/tridydb-cli/package.json
@@ -9,7 +9,7 @@
     "console": "node src/app.js console",
     "web": "node src/app.js web",
     "test": "powershell -file src/test.ps1 || pwsh -file test.ps1",
-	"jsdoc": "jsdoc src/include/Interpreter.js -d docs"
+    "jsdoc": "jsdoc src/include/Interpreter.js -d docs"
   },
   "author": "J. E. Ellis",
   "license": "MIT",
@@ -20,7 +20,9 @@
     "express": "^4.17.3",
     "http-status-codes": "^2.2.0",
     "js-yaml": "^4.1.0",
+    "knuth-shuffle-seeded": "^1.0.6",
     "morgan": "^1.10.0",
+    "seedrandom": "^3.0.5",
     "uuid-random": "^1.3.2",
     "winston": "^3.7.2"
   },
