--- a/wingspan-habitat/package.json
+++ b/wingspan-habitat/package.json
@@ -16,7 +16,9 @@
     "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
     "socket.io": "^4.5.0",
+    "sqlite3": "^5.0.8",
     "uuid-random": "^1.3.2",
+	"tridydb-cli": "^1.2.0",
     "winston": "^3.7.2"
   },
   "devDependencies": {
